[package]
name = "activer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.16"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tower-http = { version = "0.4.0", features = ["cors"] }
http = "0.2.9"
rusqlite = { version = "0.29.0", features = ["serde_json"] }
ring = "0.16.20"
base64 = "0.21.0"
openssl = "0.10.52"
jsonwebtoken = "8.3.0"
async-trait = "0.1.68"
axum-core = "0.3.4"
bytes = "1.4.0"
mime = "0.3.17"
serde_path_to_error = "0.1.11"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
mime = "0.3.17"
pretty_assertions = "1.3.0"
