[package]
name = "activer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.16", features = ["headers"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tower-http = { version = "0.4.0", features = ["cors"] }
http = "0.2.9"
rusqlite = { version = "0.28.0", features = ["serde_json", "uuid"] }
ring = "0.16.20"
base64 = "0.21.0"
openssl = "0.10.52"
jsonwebtoken = "8.3.0"
async-trait = "0.1.68"
axum-core = "0.3.4"
bytes = "1.4.0"
mime = "0.3.17"
serde_path_to_error = "0.1.11"
uuid = { version = "1.3.2", features = ["v4", "serde"] }
chrono = "0.4.24"
r2d2_sqlite = "0.21.0"
r2d2 = "0.8.10"
thiserror = "1.0.40"
reqwest = "0.11.17"
axum-macros = "0.3.7"
url = "2.3.1"
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
mime = "0.3.17"
pretty_assertions = "1.3.0"
maplit = "1.0.2"
